--- a/src/components/Recipe.scss
+++ b/src/components/Recipe.scss
@@ -1,31 +1,9 @@
-.recipe {
-    background: white;
-    margin: 2rem 0;
-    border-radius: 10px;
-    transition: all 0.4s;
-    box-shadow: 0px 0px 120px -25px rgba(0, 0, 0, 0.5);
+.card {
+    padding: 10px;
+    margin-top: 10px;
     &:hover {
         transform: scale(1.02);
         box-shadow: 0px 0px 80px -25px rgba(0, 0, 0, 0.5);
         transition: all 0.4s;
     }
-    img {
-        width: 100%;
-        display: block;
-        min-height: 13rem;
-        border-radius: 10px;
-    }
-}
-
-@media screen and (min-width: 768px) {
-    .recipe {
-        display: grid;
-        grid-template-rows: 2fr;
-        grid-row-gap: 1rem;
-        border-radius: 10px;
-    }
-}
-
-.img-container {
-    position: relative;
 }
